// latis/v1/latis.proto
//
// Core protocol definition for latis.
//
// Design Decisions:
//
// ## Bidirectional Streaming
//
// We use a single bidirectional stream (Connect) rather than multiple
// unary/streaming RPCs because:
//   - Allows multiplexed communication over one connection
//   - Either side can send at any time (true async)
//   - Control messages (cancel, state) can interleave with data
//   - Maps naturally to our protocol model
//
// ## Separate Client/Server Message Types
//
// We use distinct ClientMessage and ServerMessage types because:
//   - Type safety: compiler ensures correct message direction
//   - Clarity: obvious what each side can send
//   - Follows protobuf/gRPC conventions
//   - Simpler handlers: each side only handles relevant message types
//
// ## ID-based Correlation
//
// Every request has an ID, responses reference it. This enables:
//   - Multiple in-flight requests
//   - Out-of-order responses
//   - Cancellation of specific operations

syntax = "proto3";

package latis.v1;

option go_package = "github.com/shanemcd/latis/gen/go/latis/v1;latisv1";

// LatisService is the core service for cmdr <-> unit communication.
service LatisService {
  // Connect establishes a bidirectional stream between cmdr and unit.
  // ConnectRequest messages flow from cmdr to unit.
  // ConnectResponse messages flow from unit to cmdr.
  rpc Connect(stream ConnectRequest) returns (stream ConnectResponse);
}

// =============================================================================
// Client -> Server Messages (cmdr -> unit)
// =============================================================================

// ConnectRequest is the envelope for all messages from cmdr to unit.
message ConnectRequest {
  // id uniquely identifies this message for request/response correlation.
  string id = 1;

  // payload contains the type-specific message content.
  oneof payload {
    PromptSend prompt_send = 10;
    PromptCancel prompt_cancel = 11;
    StateGet state_get = 12;
    StateSubscribe state_subscribe = 13;
    Ping ping = 30;
  }
}

// PromptSend sends a prompt to the agent.
message PromptSend {
  string content = 1;

  // Optional metadata for the prompt (e.g., context, session info)
  map<string, string> metadata = 2;
}

// PromptCancel requests cancellation of an in-progress prompt.
message PromptCancel {
  // target_id is the ID of the PromptSend message to cancel.
  string target_id = 1;
}

// StateGet requests the current state of the unit/agent.
message StateGet {}

// StateSubscribe requests ongoing state updates.
message StateSubscribe {
  // If true, unsubscribe from state updates.
  bool unsubscribe = 1;
}

// Ping is a keepalive/health check from client.
message Ping {
  int64 timestamp = 1;
}

// =============================================================================
// Server -> Client Messages (unit -> cmdr)
// =============================================================================

// ConnectResponse is the envelope for all messages from unit to cmdr.
message ConnectResponse {
  // id uniquely identifies this message.
  // For responses, this references the originating ConnectRequest.id.
  string id = 1;

  // payload contains the type-specific message content.
  oneof payload {
    ResponseChunk response_chunk = 20;
    ResponseComplete response_complete = 21;
    ResponseCancelled response_cancelled = 22;
    StateUpdate state_update = 23;
    Error error = 24;
    Pong pong = 31;
  }
}

// ResponseChunk is a streaming fragment of a response.
message ResponseChunk {
  // request_id references the originating PromptSend.
  string request_id = 1;

  // content is the text fragment.
  string content = 2;

  // sequence is the order of this chunk (0-indexed).
  uint32 sequence = 3;
}

// ResponseComplete signals the end of a response.
message ResponseComplete {
  // request_id references the originating PromptSend.
  string request_id = 1;

  // Optional final metadata (token counts, timing, etc.)
  map<string, string> metadata = 2;
}

// ResponseCancelled confirms a prompt was cancelled.
message ResponseCancelled {
  // request_id references the cancelled PromptSend.
  string request_id = 1;
}

// StateUpdate provides current state of the unit/agent.
message StateUpdate {
  // busy indicates whether the agent is currently processing.
  bool busy = 1;

  // Additional state as key-value pairs.
  map<string, string> state = 2;
}

// Error reports an error condition.
message Error {
  // request_id references the originating request (if applicable).
  string request_id = 1;

  // code is a machine-readable error code.
  string code = 2;

  // message is a human-readable error description.
  string message = 3;
}

// Pong is a keepalive/health check response.
message Pong {
  int64 ping_timestamp = 1;
  int64 pong_timestamp = 2;
}
